tests/desugar/should_fail/timed_nondet_input.csp
channel c : {0,1}

channel tock

Timed (\_ @ 1) {
    procTest1 = c$x -> STOP
}
